# capstone

./: .gitignore  README.md  agents.py  batch_run_experiments.py  communication.py  constants.py  context.py  database.py  environment.py  experiment.py  generate_swarm_run_averages.py  helpers.py  information_decay.md  llm.py  main.py  metrics.py  plot_multi_experiment_averages.py  plot_single_agent_vs_swarm_self.py  plot_single_agent_vs_swarm_social.py  plot_swarm_experiment_averages.py  plot_swarm_group_scores.py  pyproject.toml  run.sh  runtime_config.py  sensors.py  story_registry.py  subjects.py  test.py  test_metrics.py  visualize.py  visualize_experiments.py  world.py
analysis/: aggregate_profile_scores.py
configs/: configs.yaml
experiments/1/: experiment.json
experiments/10/: experiment.json
experiments/11/: experiment.json  notes.txt
experiments/12/: experiment.json  notes.txt
experiments/13/: experiment.json
experiments/14/: experiment.json
experiments/15/: experiment.json
experiments/16/: experiment.json
experiments/17/: experiment.json
experiments/18/: experiment.json
experiments/19/: experiment.json
experiments/2/: experiment.json
experiments/20/: experiment.json
experiments/21/: experiment.json
experiments/22/: experiment.json
experiments/23/: experiment.json
experiments/24/: experiment.json  notes.txt
experiments/25/: experiment.json  notes.txt
experiments/26/: experiment.json
experiments/27/: experiment.json
experiments/29/: experiment.json
experiments/3/: experiment.json
experiments/30/: experiment.json
(+1243 files in other folders)
