[project]
name = "pci-2025"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.3.3",
    "ollama>=0.5.4",
    "openai>=1.107.2",
    "pydantic>=2.11.8",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "violet-simulator>=0.3.0",
]
